fix contrast issue on 2.5 chip

--- a/css/style.css
+++ b/css/style.css
@@ -103,14 +103,14 @@ div.chips> button, div.blackjack-chip> button{
   height: 75px;
   width: 75px;
   border-radius: 50%;
-  color: rgb(243, 233, 217);
+  color: rgb(255, 246, 234);
   font-size: 20px;
   border: dashed;
   box-shadow: 1px 5px 5px rgb(179, 161, 140);
   margin: 5px;
 }
 #chip2_5{
-  background-color: rgb(149, 113, 6);
+  background-color: rgb(135, 106, 20);
   margin: 5px 10px;
 }
 #chip5{
